Update index, login, and add signup page

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,7 @@
         <div class="nav-links">
             <a href="messages.html">All Messages</a>
             <a href="post.html">New Post</a>
+            <a href="signup.html">Sign Up</a>
             <a href="#" onclick="logout(); return false;">Logout</a>
         </div>
     </div>
