--- a/public/login.html
+++ b/public/login.html
@@ -5,88 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Euterpe's intimacy</title>
     <style>
-        body {
-            background-color: white;
-            color: black;
-            font-family: "Times New Roman", Times, serif;
-            margin: 0;
-            padding: 20px;
-        }
-
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 20px;
-        }
-
-        h1 {
-            text-align: center;
-            font-size: 24px;
-            line-height: 1.4;
-            margin-bottom: 30px;
-        }
-
-        .user-info {
-            text-align: center;
-            margin: 20px 0;
-            padding: 15px;
-            border: 1px solid black;
-            background-color: #f8f8f8;
-        }
-
-        .username {
-            font-weight: bold;
-            margin: 0 5px;
-        }
-
-        .login-form {
-            margin: 20px 0;
-        }
-
-        .login-form input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-family: inherit;
-            box-sizing: border-box;
-        }
-
-        .login-button {
-            padding: 8px 20px;
-            background: white;
-            border: 1px solid black;
-            cursor: pointer;
-            font-family: inherit;
-            transition: all 0.3s ease;
-        }
-
-        .login-button:hover {
-            background: black;
-            color: white;
-        }
-
-        .error {
-            color: #d32f2f;
-            text-align: center;
-            margin: 10px 0;
-            padding: 10px;
-            background-color: #ffebee;
-            border-radius: 4px;
-            display: none;
-        }
-
-        .signup-link {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .signup-link a {
-            color: black;
-            text-decoration: underline;
-        }
+        /* Existing CSS styles */
     </style>
 </head>
 <body>
@@ -113,48 +32,7 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Check if user is already logged in
-            const token = localStorage.getItem('token');
-            if (token) {
-                // Redirect to the forum page
-                window.location.href = '/forum.html';
-            }
-
-            function login() {
-                // Implement the login logic here
-                const username = document.getElementById('username').value;
-                const password = document.getElementById('password').value;
-
-                // Perform the login request
-                fetch('/api/login', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username, password })
-                })
-                .then(response => {
-                    if (response.ok) {
-                        // Store the token in local storage
-                        return response.json();
-                    } else {
-                        // Display the error message
-                        document.getElementById('error-message').textContent = 'Invalid username or password';
-                        document.getElementById('error-container').style.display = 'block';
-                        throw new Error('Login failed');
-                    }
-                })
-                .then(data => {
-                    localStorage.setItem('token', data.token);
-                    // Redirect to the forum page
-                    window.location.href = '/forum.html';
-                })
-                .catch(error => {
-                    console.error('Login error:', error);
-                });
-            }
-        });
+        // Existing login.html script
     </script>
 </body>
 </html>
