--- a/public/signup.html
+++ b/public/signup.html
@@ -1,129 +1,210 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign Up - Euterpe's intimacy</title>
-    <style>
-        body {
-            background-color: white;
-            color: black;
-            font-family: "Times New Roman", Times, serif;
-            margin: 0;
-            padding: 20px;
+const express = require('express');
+const bodyParser = require('body-parser');
+const session = require('express-session');
+const path = require('path');
+const mongoose = require('mongoose');
+
+const app = express();
+const port = process.env.PORT || 3000;
+
+// MongoDB connection with error handling
+mongoose.connect(process.env.MONGODB_URI, {
+    dbName: 'euterpe-forum'
+})
+.then(() => console.log('Connected to MongoDB'))
+.catch(err => {
+    console.error('MongoDB connection error:', err);
+    // Safely log the connection string without exposing credentials
+    const safeUri = process.env.MONGODB_URI.replace(
+        /(mongodb\+srv:\/\/)([^:]+):([^@]+)@/,
+        '$1[USERNAME]:[PASSWORD]@'
+    );
+    console.log('Attempted connection string:', safeUri);
+});
+
+// Message Schema
+const MessageSchema = new mongoose.Schema({
+    content: String,
+    author: String,
+    timestamp: String,
+    replies: [{
+        content: String,
+        author: String,
+        timestamp: String
+    }]
+}, { timestamps: true });
+
+const Message = mongoose.model('Message', MessageSchema);
+
+// User Schema
+const UserSchema = new mongoose.Schema({
+    username: { type: String, unique: true },
+    password: String
+}, { timestamps: true });
+
+const User = mongoose.model('User', UserSchema);
+
+// Middleware setup
+app.use(bodyParser.json());
+app.use(bodyParser.urlencoded({ extended: true }));
+app.use(express.static(path.join(__dirname, 'public')));
+app.use(session({
+    secret: 'your-secret-key',
+    resave: true,
+    saveUninitialized: false,
+    cookie: {
+        secure: process.env.NODE_ENV === 'production',
+        maxAge: 24 * 60 * 60 * 1000 // 24 hours
+    }
+}));
+
+// Authentication middleware
+const requireLogin = (req, res, next) => {
+    if (!req.session.user) {
+        return res.redirect('/login.html');
+    }
+    next();
+};
+
+// Routes
+app.get('/', requireLogin, (req, res) => {
+    res.sendFile(path.join(__dirname, 'public', 'index.html'));
+});
+
+app.get('/current-user', requireLogin, (req, res) => {
+    console.log('Session:', req.session); // Debug log
+    if (req.session && req.session.user && req.session.user.username) {
+        res.json({ username: req.session.user.username });
+    } else {
+        res.status(401).json({ error: 'Not logged in' });
+    }
+});
+
+app.get('/messages', requireLogin, async (req, res) => {
+    try {
+        const messages = await Message.find().sort('-timestamp');
+        res.json(messages);
+    } catch (error) {
+        console.error('Error fetching messages:', error);
+        res.status(500).json({ error: 'Error fetching messages' });
+    }
+});
+
+app.post('/post', requireLogin, async (req, res) => {
+    try {
+        const { content } = req.body;
+        if (!content) {
+            return res.status(400).json({ error: 'Content is required' });
         }
+        const newMessage = new Message({
+            content,
+            author: req.session.user.username,
+            timestamp: new Date().toLocaleString(),
+            replies: []
+        });
+        await newMessage.save();
+        res.json(newMessage);
+    } catch (error) {
+        console.error('Error creating post:', error);
+        res.status(500).json({ error: 'Error creating post' });
+    }
+});
 
-        .container {
-            width: 100%;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 20px;
+app.post('/reply/:postId', requireLogin, async (req, res) => {
+    try {
+        const { content } = req.body;
+        if (!content) {
+            return res.status(400).json({ error: 'Content is required' });
         }
-
-        h1 {
-            text-align: center;
-            font-size: 24px;
-            line-height: 1.4;
-            margin-bottom: 30px;
+        const post = await Message.findById(req.params.postId);
+        if (!post) {
+            return res.status(404).json({ error: 'Post not found' });
         }
+        const reply = {
+            content,
+            author: req.session.user.username,
+            timestamp: new Date().toLocaleString()
+        };
+        post.replies.push(reply);
+        await post.save();
+        res.json(reply);
+    } catch (error) {
+        console.error('Error creating reply:', error);
+        res.status(500).json({ error: 'Error creating reply' });
+    }
+});
 
-        .signup-form {
-            margin: 20px 0;
+app.post('/login', async (req, res) => {
+    try {
+        const { username, password } = req.body;
+
+        if (!username || !password) {
+            return res.status(400).json({ error: 'Username and password are required' });
         }
+        // For development, allow any login
+        req.session.user = { username };
 
-        .signup-form input {
-            width: 100%;
-            padding: 12px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            font-family: inherit;
-            box-sizing: border-box;
-        }
-
-        .signup-button {
-            padding: 8px 20px;
-            background: white;
-            border: 1px solid black;
-            cursor: pointer;
-            font-family: inherit;
-            transition: all 0.3s ease;
-        }
-
-        .signup-button:hover {
-            background: black;
-            color: white;
-        }
-
-        .error {
-            color: #d32f2f;
-            text-align: center;
-            margin: 10px 0;
-            padding: 10px;
-            background-color: #ffebee;
-            border-radius: 4px;
-            display: none;
-        }
-
-        .login-link {
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        .login-link a {
-            color: black;
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <h1>Sign Up - Euterpe's intimacy</h1>
-
-        <div id="error-container" class="error">
-            <div id="error-message"></div>
-        </div>
-
-        <div class="signup-form">
-            <input type="text" id="username" placeholder="Enter your username" required>
-            <input type="password" id="password" placeholder="Enter your password" required>
-            <button class="signup-button" onclick="signup()">Sign Up</button>
-        </div>
-
-        <div class="login-link">
-            Already have an account? <a href="login.html">Log in</a>
-        </div>
-    </div>
-
-    <script>
-        async function signup() {
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-
-            try {
-                const response = await fetch('/api/signup', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
-                    body: JSON.stringify({ username, password })
-                });
-
-                if (response.ok) {
-                    const { token } = await response.json();
-                    localStorage.setItem('token', token);
-                    window.location.href = '/forum.html';
-                } else {
-                    const { error } = await response.json();
-                    document.getElementById('error-message').textContent = error;
-                    document.getElementById('error-container').style.display = 'block';
-                }
-            } catch (error) {
-                console.error('Signup error:', error);
-                document.getElementById('error-message').textContent = 'An error occurred during signup. Please try again.';
-                document.getElementById('error-container').style.display = 'block';
+        // Save session explicitly
+        req.session.save((err) => {
+            if (err) {
+                console.error('Session save error:', err);
+                return res.status(500).json({ error: 'Login failed' });
             }
+            console.log('Session after login:', req.session); // Debug log
+            res.json({ success: true, username: username });
+        });
+    } catch (error) {
+        console.error('Login error:', error);
+        res.status(500).json({ error: 'Login failed' });
+    }
+});
+
+app.post('/signup', async (req, res) => {
+    try {
+        const { username, password } = req.body;
+
+        if (!username || !password) {
+            return res.status(400).json({ error: 'Username and password are required' });
         }
-    </script>
-</body>
-</html>
+        const existingUser = await User.findOne({ username });
+        if (existingUser) {
+            return res.status(400).json({ error: 'Username already exists' });
+        }
+        const user = new User({ username, password });
+        await user.save();
+        req.session.user = { username };
+
+        // Save session explicitly
+        req.session.save((err) => {
+            if (err) {
+                console.error('Session save error:', err);
+                return res.status(500).json({ error: 'Signup failed' });
+            }
+            console.log('Session after signup:', req.session); // Debug log
+            res.json({ success: true, username: username });
+        });
+    } catch (error) {
+        console.error('Signup error:', error);
+        res.status(500).json({ error: 'Signup failed' });
+    }
+});
+
+app.get('/logout', (req, res) => {
+    req.session.destroy((err) => {
+        if (err) {
+            console.error('Error destroying session:', err);
+            return res.status(500).json({ error: 'Logout failed' });
+        }
+        res.redirect('/login.html');
+    });
+});
+
+// Error handling middleware
+app.use((err, req, res, next) => {
+    console.error('Global error:', err);
+    res.status(500).json({ error: 'Something went wrong!' });
+});
+
+app.listen(port, () => {
+    console.log(`Server running at http://localhost:${port}`);
+});
