Updated HTML files with form submission handling

--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Euterpe's intimacy</title>
+    <title>Euterpe's Place</title>
 </head>
 <body>
-    <h1>Euterpe's intimacy</h1>
-    <p>Euterpe's forum to connect and find someone who you don't feel bored around and they are different</p>
+    <h1>Euterpe's Place</h1>
+    <p>Euterpe's place to connect and find someone who you don't feel bored around and they are different</p>
     <p>You are logged in as: <span id="username"></span></p>
     <button id="logoutButton">Logout</button>
     <button id="postButton">Post</button>
