--- a/public/signup.html
+++ b/public/signup.html
@@ -1,210 +1,45 @@
-const express = require('express');
-const bodyParser = require('body-parser');
-const session = require('express-session');
-const path = require('path');
-const mongoose = require('mongoose');
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sign Up - Euterpe's Intimacy</title>
+</head>
+<body>
+    <h1>Sign Up - Euterpe's Intimacy</h1>
+    <form id="signupForm">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" required>
+        <br>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+        <br>
+        <button type="submit">Sign Up</button>
+    </form>
+    <p>Already have an account? <a href="/login.html">Log in</a></p>
 
-const app = express();
-const port = process.env.PORT || 3000;
+    <script>
+        document.getElementById('signupForm').addEventListener('submit', async (event) => {
+            event.preventDefault();
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
 
-// MongoDB connection with error handling
-mongoose.connect(process.env.MONGODB_URI, {
-    dbName: 'euterpe-forum'
-})
-.then(() => console.log('Connected to MongoDB'))
-.catch(err => {
-    console.error('MongoDB connection error:', err);
-    // Safely log the connection string without exposing credentials
-    const safeUri = process.env.MONGODB_URI.replace(
-        /(mongodb\+srv:\/\/)([^:]+):([^@]+)@/,
-        '$1[USERNAME]:[PASSWORD]@'
-    );
-    console.log('Attempted connection string:', safeUri);
-});
+            const response = await fetch('/signup', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ username, password })
+            });
 
-// Message Schema
-const MessageSchema = new mongoose.Schema({
-    content: String,
-    author: String,
-    timestamp: String,
-    replies: [{
-        content: String,
-        author: String,
-        timestamp: String
-    }]
-}, { timestamps: true });
-
-const Message = mongoose.model('Message', MessageSchema);
-
-// User Schema
-const UserSchema = new mongoose.Schema({
-    username: { type: String, unique: true },
-    password: String
-}, { timestamps: true });
-
-const User = mongoose.model('User', UserSchema);
-
-// Middleware setup
-app.use(bodyParser.json());
-app.use(bodyParser.urlencoded({ extended: true }));
-app.use(express.static(path.join(__dirname, 'public')));
-app.use(session({
-    secret: 'your-secret-key',
-    resave: true,
-    saveUninitialized: false,
-    cookie: {
-        secure: process.env.NODE_ENV === 'production',
-        maxAge: 24 * 60 * 60 * 1000 // 24 hours
-    }
-}));
-
-// Authentication middleware
-const requireLogin = (req, res, next) => {
-    if (!req.session.user) {
-        return res.redirect('/login.html');
-    }
-    next();
-};
-
-// Routes
-app.get('/', requireLogin, (req, res) => {
-    res.sendFile(path.join(__dirname, 'public', 'index.html'));
-});
-
-app.get('/current-user', requireLogin, (req, res) => {
-    console.log('Session:', req.session); // Debug log
-    if (req.session && req.session.user && req.session.user.username) {
-        res.json({ username: req.session.user.username });
-    } else {
-        res.status(401).json({ error: 'Not logged in' });
-    }
-});
-
-app.get('/messages', requireLogin, async (req, res) => {
-    try {
-        const messages = await Message.find().sort('-timestamp');
-        res.json(messages);
-    } catch (error) {
-        console.error('Error fetching messages:', error);
-        res.status(500).json({ error: 'Error fetching messages' });
-    }
-});
-
-app.post('/post', requireLogin, async (req, res) => {
-    try {
-        const { content } = req.body;
-        if (!content) {
-            return res.status(400).json({ error: 'Content is required' });
-        }
-        const newMessage = new Message({
-            content,
-            author: req.session.user.username,
-            timestamp: new Date().toLocaleString(),
-            replies: []
-        });
-        await newMessage.save();
-        res.json(newMessage);
-    } catch (error) {
-        console.error('Error creating post:', error);
-        res.status(500).json({ error: 'Error creating post' });
-    }
-});
-
-app.post('/reply/:postId', requireLogin, async (req, res) => {
-    try {
-        const { content } = req.body;
-        if (!content) {
-            return res.status(400).json({ error: 'Content is required' });
-        }
-        const post = await Message.findById(req.params.postId);
-        if (!post) {
-            return res.status(404).json({ error: 'Post not found' });
-        }
-        const reply = {
-            content,
-            author: req.session.user.username,
-            timestamp: new Date().toLocaleString()
-        };
-        post.replies.push(reply);
-        await post.save();
-        res.json(reply);
-    } catch (error) {
-        console.error('Error creating reply:', error);
-        res.status(500).json({ error: 'Error creating reply' });
-    }
-});
-
-app.post('/login', async (req, res) => {
-    try {
-        const { username, password } = req.body;
-
-        if (!username || !password) {
-            return res.status(400).json({ error: 'Username and password are required' });
-        }
-        // For development, allow any login
-        req.session.user = { username };
-
-        // Save session explicitly
-        req.session.save((err) => {
-            if (err) {
-                console.error('Session save error:', err);
-                return res.status(500).json({ error: 'Login failed' });
+            const result = await response.json();
+            if (result.success) {
+                window.location.href = '/';
+            } else {
+                alert(result.error);
             }
-            console.log('Session after login:', req.session); // Debug log
-            res.json({ success: true, username: username });
         });
-    } catch (error) {
-        console.error('Login error:', error);
-        res.status(500).json({ error: 'Login failed' });
-    }
-});
+    </script>
+</body>
+</html>
 
-app.post('/signup', async (req, res) => {
-    try {
-        const { username, password } = req.body;
-
-        if (!username || !password) {
-            return res.status(400).json({ error: 'Username and password are required' });
-        }
-        const existingUser = await User.findOne({ username });
-        if (existingUser) {
-            return res.status(400).json({ error: 'Username already exists' });
-        }
-        const user = new User({ username, password });
-        await user.save();
-        req.session.user = { username };
-
-        // Save session explicitly
-        req.session.save((err) => {
-            if (err) {
-                console.error('Session save error:', err);
-                return res.status(500).json({ error: 'Signup failed' });
-            }
-            console.log('Session after signup:', req.session); // Debug log
-            res.json({ success: true, username: username });
-        });
-    } catch (error) {
-        console.error('Signup error:', error);
-        res.status(500).json({ error: 'Signup failed' });
-    }
-});
-
-app.get('/logout', (req, res) => {
-    req.session.destroy((err) => {
-        if (err) {
-            console.error('Error destroying session:', err);
-            return res.status(500).json({ error: 'Logout failed' });
-        }
-        res.redirect('/login.html');
-    });
-});
-
-// Error handling middleware
-app.use((err, req, res, next) => {
-    console.error('Global error:', err);
-    res.status(500).json({ error: 'Something went wrong!' });
-});
-
-app.listen(port, () => {
-    console.log(`Server running at http://localhost:${port}`);
-});
