--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,13 @@
             <div id="user-info">
                 Logged in as: <span id="username"></span>
                 <button id="logout-btn">Logout</button>
+                <a href="/create-post.html" id="create-post-link">Create Post</a>
             </div>
         </header>
-
         <div class="message-form">
             <textarea id="message-input" placeholder="Write your message here..."></textarea>
             <button id="post-btn">Post Message</button>
         </div>
-
         <div id="messages" class="messages-container">
             <!-- Messages will be inserted here -->
         </div>
