--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,8 @@
     </div>
 
     <script>
+        let userId;
+
         document.addEventListener('DOMContentLoaded', () => {
             checkAuth();
             loadPosts();
@@ -70,7 +72,8 @@
                 
                 const imageFile = document.getElementById('image').files[0];
                 if (imageFile) {
-                    formData.append('image', imageFile);
+                    const resizedImage = await resizeImage(imageFile, 250, 250);
+                    formData.append('image', resizedImage, imageFile.name);
                 }
 
                 try {
@@ -106,7 +109,7 @@
                         <h3>${post.title}</h3>
                         <p class="author">Posted by ${post.author.username}</p>
                         <p class="content">${post.content}</p>
-                        ${post.image ? `<img src="${post.image}" alt="Post image">` : ''}
+                        ${post.image ? `<img src="${post.image}" alt="Post image" style="width: 250px; height: 250px;">` : ''}
                         <div class="replies">
                             ${post.replies.map(reply => `
                                 <div class="reply">
@@ -174,6 +177,37 @@
                 })
                 .then(() => window.location.href = '/login.html')
                 .catch(error => console.error('Error:', error));
+            });
+        }
+
+        async function resizeImage(file, maxWidth, maxHeight) {
+            const canvas = document.createElement('canvas');
+            const context = canvas.getContext('2d');
+            const img = await createImageBitmap(file);
+
+            let width = img.width;
+            let height = img.height;
+
+            if (width > height) {
+                if (width > maxWidth) {
+                    height *= maxWidth / width;
+                    width = maxWidth;
+                }
+            } else {
+                if (height > maxHeight) {
+                    width *= maxHeight / height;
+                    height = maxHeight;
+                }
+            }
+
+            canvas.width = width;
+            canvas.height = height;
+            context.drawImage(img, 0, 0, width, height);
+
+            return new Promise((resolve, reject) => {
+                canvas.toBlob((blob) => {
+                    resolve(blob);
+                }, 'image/jpeg', 0.9);
             });
         }
     </script>
