--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Message Board</title>
+    <title>Euterpe's Intimacy</title>
     <style>
         body {
             font-family: "Times New Roman", Times, serif;
