--- a/public/index.html
+++ b/public/index.html
@@ -1,27 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+</head>
+<body><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euterpe's Intimacy</title>
     <style>
-        .hidden {
-            display: none;
-        }
-        .container {
-            margin: auto;
-            padding: 1rem;
-        }
         .posts-container {
-            margin-top: 1rem;
-        }
-        .post-image {
-            max-width: 100%;
-            height: auto;
+            border: 1px solid #000000;
+            padding: 20px;
+            margin: 10px auto;
+            max-width: 800px;
         }
     </style>
 </head>
-<body>
     <div class="container">
         <h1>Euterpe's Intimacy</h1>
 
