--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-</head>
-<body><head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Euterpe's Intimacy</title>
     <style>
         .posts-container {
+            max-width: 800px;
+            margin: 10px auto;
+        }
+        .post {
             border: 1px solid #000000;
             padding: 20px;
-            margin: 10px auto;
+            margin-bottom: 20px;
+        }
+        #post-form {
+            border: 1px solid #000000;
+            padding: 20px;
+            margin: 20px auto;
             max-width: 800px;
         }
     </style>
 </head>
+<body>
     <div class="container">
         <h1>Euterpe's Intimacy</h1>
 
