--- a/public/create-post.html
+++ b/public/create-post.html
@@ -33,7 +33,7 @@
                     <input type="file" id="image" name="image" accept="image/*">
                 </div>
 
-                <button type="submit">Create Post</button>
+                <button type="submit" id="submitBtn">Create Post</button>
                 <button type="button" onclick="window.location.href='/'">Cancel</button>
             </form>
         </div>
